Bug #25551: inconsistent behaviour in grouping NULL, depending on index type  The optimizer takes away columns from GROUP BY/DISTINCT if they constitute  all the parts of an unique index.  However if some of the columns can contain NULLs this cannot be done (because an UNIQUE index can have multiple rows with NULL values).  Fixed by not using UNIQUE indexes with nullable columns to remove  grouping columns from GROUP BY/DISTINCT.